--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/audio-toolkit": "^2.0.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.1.0",
-    "react-native": "0.70.15"
+    "react-native": "0.70.15",
+    "react-native-audio-toolkit": "^1.0.6",
+    "react-native-deck-swiper": "^2.0.16",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
