--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.0.5",
     "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -20,8 +21,10 @@
     "react-native-audio-toolkit": "^1.0.6",
     "react-native-deck-swiper": "^2.0.16",
     "react-native-elements": "^3.4.3",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
