--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "ios15": "react-native run-ios --simulator=\"iPhone 15\"",
+    "ios13": "react-native run-ios --simulator=\"iPhone 13\"",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
