--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@vivaxy/png": "^1.3.0",
+    "buffer": "^6.0.3",
     "get-pixels": "^3.3.3",
     "react": "18.1.0",
     "react-native": "0.70.15",
     "react-native-audio-toolkit": "^1.0.6",
     "react-native-deck-swiper": "^2.0.16",
     "react-native-elements": "^3.4.3",
+    "react-native-file-access": "^3.0.6",
+    "react-native-fs": "^2.20.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-filter-kit": "^0.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
