--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vivaxy/png": "^1.3.0",
     "buffer": "^6.0.3",
     "get-pixels": "^3.3.3",
+    "jimp": "^0.22.12",
+    "pngjs": "^7.0.0",
     "react": "18.1.0",
     "react-native": "0.70.15",
     "react-native-audio-toolkit": "^1.0.6",
