--- a/utils/ironicConfig.json
+++ b/utils/ironicConfig.json
@@ -1,11 +1,11 @@
 {
     "colors": {
       "Test image": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "heavy"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/bass-electric/As2.mp3", "volume": 0.9, "haptic": "heavy"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/flute/C5.mp3", "volume": 2.0, "haptic": "heavy"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/violin/G6.mp3", "volume": 2.0, "haptic": "heavy"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": "impactLight"},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "notificationSuccess"},
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": "notificationSuccess"},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": "notificationSuccess"},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": "notificationSuccess"}
       },
       "MG B2016+112": {
         "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
