--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-image-filter-kit": "^0.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
     "rn-fetch-blob": "^0.12.0"
   },
