--- a/utils/ironicConfig.json
+++ b/utils/ironicConfig.json
@@ -1,46 +1,46 @@
 {
     "colors": {
       "Test image": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": "impactLight"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "notificationSuccess"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": "notificationSuccess"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": "notificationSuccess"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": "notificationSuccess"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": { "type": "haptic", "spec": "impactLight" }},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [200, 5, 200] } },
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [500] }},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": { "type": "haptic", "spec": "notificationSuccess" }},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": { "type": "vibration", "spec": [200, 5, 200] } }
       },
       "MG B2016+112": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "heavy"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/bass-electric/As2.mp3", "volume": 0.9, "haptic": "heavy"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/flute/C5.mp3", "volume": 2.0, "haptic": "heavy"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/violin/G6.mp3", "volume": 2.0, "haptic": "heavy"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": { "type": "haptic", "spec": "impactLight" }},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [200, 100, 200] } },
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [300] }},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": { "type": "haptic", "spec": "notificationSuccess" }},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": { "type": "vibration", "spec": [200, 100, 200] } }
       },
       "V404 Cygni": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "heavy"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/bass-electric/As2.mp3", "volume": 0.9, "haptic": "heavy"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/flute/C5.mp3", "volume": 2.0, "haptic": "heavy"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/violin/G6.mp3", "volume": 2.0, "haptic": "heavy"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": { "type": "haptic", "spec": "impactLight" }},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [200, 100, 200] } },
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [300] }},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": { "type": "haptic", "spec": "notificationSuccess" }},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": { "type": "vibration", "spec": [200, 100, 200] } }
       },
       "Abell 1775": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "heavy"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/bass-electric/As2.mp3", "volume": 0.9, "haptic": "heavy"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/flute/C5.mp3", "volume": 2.0, "haptic": "heavy"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/violin/G6.mp3", "volume": 2.0, "haptic": "heavy"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": { "type": "haptic", "spec": "impactLight" }},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [200, 100, 200] } },
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [300] }},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": { "type": "haptic", "spec": "notificationSuccess" }},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": { "type": "vibration", "spec": [200, 100, 200] } }
       },
       "Northern Clump": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "heavy"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/bass-electric/As2.mp3", "volume": 0.9, "haptic": "heavy"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/flute/C5.mp3", "volume": 2.0, "haptic": "heavy"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/violin/G6.mp3", "volume": 2.0, "haptic": "heavy"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": { "type": "haptic", "spec": "impactLight" }},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [200, 100, 200] } },
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [300] }},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": { "type": "haptic", "spec": "notificationSuccess" }},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": { "type": "vibration", "spec": [200, 100, 200] } }
       },
       "MSH 15-52": {
-        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/C1.mp3", "volume": 0.1, "haptic": "light"},
-        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": "heavy"},
-        "1": { "sound": "https://sgouros.com/stellasonos/samples/bass-electric/As2.mp3", "volume": 0.9, "haptic": "heavy"},
-        "2": { "sound": "https://sgouros.com/stellasonos/samples/flute/C5.mp3", "volume": 2.0, "haptic": "heavy"},
-        "3": { "sound": "https://sgouros.com/stellasonos/samples/violin/G6.mp3", "volume": 2.0, "haptic": "heavy"}
+        "-1": { "sound": "https://sgouros.com/stellasonos/samples/piano/E3.mp3", "volume": 0.1, "haptic": { "type": "haptic", "spec": "impactLight" }},
+        "0": { "sound": "https://stellasonos-files.vercel.app/samples/bassoon/G1.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [200, 100, 200] } },
+        "1": { "sound": "https://sgouros.com/stellasonos/samples/flute/A4.mp3", "volume": 0.9, "haptic": { "type": "vibration", "spec": [300] }},
+        "2": { "sound": "https://sgouros.com/stellasonos/samples/harp/B5.mp3", "volume": 2.0, "haptic": { "type": "haptic", "spec": "notificationSuccess" }},
+        "3": { "sound": "https://sgouros.com/stellasonos/samples/saxophone/Cs4.mp3", "volume": 2.0, "haptic": { "type": "vibration", "spec": [200, 100, 200] } }
       }
     }
   }
