--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@vivaxy/png": "^1.3.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "jimp": "^0.22.12",
     "react": "18.1.0",
     "react-native": "0.70.15",
     "react-native-audio-toolkit": "^1.0.6",
     "react-native-deck-swiper": "^2.0.16",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-filter-kit": "^0.8.0",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-sound": "^0.11.2",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "^10.1.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
